--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,11 @@ jobs:
 
       - name: Build project
         run: |
-          export STATIONEERS_DLL_DIR="$STEAM_DIR/steamapps/common/Stationeers Dedicated Server/rocketstation_DedicatedServer_Data/Managed"
+          # Merge dlls from submodule with dedicated server dlls
+          mkdir -p "$GITHUB_WORKSPACE/assemblies"
+          export STATIONEERS_DLL_DIR="$GITHUB_WORKSPACE/assemblies"
+          cp $STEAM_DIR/steamapps/common/Stationeers\ Dedicated\ Server/rocketstation_DedicatedServer_Data/Managed/*.dll $STATIONEERS_DLL_DIR/
+          find $STATIONEERS_DLL_DIR
           dotnet restore
           dotnet build --configuration Release Main.csproj
 
